--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 VideoFix.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInterfaceState.xcuserstate
+
+VideoFix.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
