--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 VideoFix.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInterfaceState.xcuserstate
 
 VideoFix.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+VideoFix/Supporting Files/Constants.h
