--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ VideoFix.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInter
 VideoFix.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
 
 VideoFix/Supporting Files/Constants.h
+
+VideoFix.xcodeproj/xcuserdata/sebastienwickert.xcuserdatad/xcschemes/xcschememanagement.plist
+
+VideoFix.xcodeproj/xcuserdata/sebastienwickert.xcuserdatad/xcschemes/VideoFix.xcscheme
+
+VideoFix.xcodeproj/xcuserdata/sebastienwickert.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+VideoFix.xcodeproj/project.xcworkspace/xcuserdata/sebastienwickert.xcuserdatad/UserInterfaceState.xcuserstate
+
+.DS_Store
