--- a/VideoFix/VideoFix-Info.plist
+++ b/VideoFix/VideoFix-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>Florian-Reiss.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Florian-Reiss.videoFix</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
